@startuml
skinparam classAttributeIconSize 0

package ch.giuliobosco.freqline.servlets {
    abstract BaseServlet {
        
    }

    package action {
        abstract SerialServlet {
            - SerialThread serialThread
            + SerialServlet(SerialThread serialThread)
            + SerialThread getSerialThread()
        }
        BaseServlet <|-- SerialServlet

        class LoginServlet {
            - String LOGGED_IN 
            - String WRONG_USERNAME_PASSWORD
            # void doPost(HttpServletRequest request, HttpServletResponse response)
            - void checkOldSession(HttpServletRequest request)
            - void executePost(HttpServletRequest request, HttpServletResponse response, ServletRequestAnalyser sra)
            # void doGet(HttpServletRequest request, HttpServletResponse response)
        }
        LoginServlet --|> BaseServlet

        class GeneratorStatusServlet {
            - String GET_GENERATOR_STATUS_PERM
            - String SET_GENERATOR_STATUS_PERM
            - String STATUS
            - String[] REQUIRED_POST_PARAMETERS
            # void doPost(HttpServletRequest request, HttpServletResponse response)
            # void doGet(HttpServletRequest request, HttpServletResponse response)
            - void executePost(HttpServletResponse response, Connection connection, int userId, ServletRequestAnalyser sra)
        }
        GeneratorStatusServlet --|> SerialServlet

        class GeneratorMicServlet {
            - String SET_GENERATOR_MIC_PERM
            - String GET_GENERATOR_MIC_PERM
            - String TIMER
            - String[] REQUIRED_POST_PARAMETERS
            - void executePost(HttpServletResponse response, Connection connection, int userId, ServletRequestAnalyser sra)
            # void doPost(HttpServletRequest request, HttpServletResponse response)
            # void doGet(HttpServletRequest request, HttpServletResponse response)
        }
        GeneratorMicServlet --|> BaseServlet

        class GeneratorFrequenceServlet {
            - String SET_GENERATOR_FREQUENCE_PERM
            - String GET_GENERATOR_FREQUENCE_PERM
            - String FREQUENCE
            - String[] REQUIRED_POST_PARAMETERS
            - void executePost(HttpServletResponse response, Connection connection, int userId, ServletRequestAnalyser sra)
            # void doPost(HttpServletRequest request, HttpServletResponse response)
            # void doGet(HttpServletRequest request, HttpServletResponse response)
        }
        GeneratorFrequenceServlet --|> SerialServlet

        class GeneratorDecibelServlet {
            - String SET_GENERATOR_DECIBEL_PERM
            - String GET_GENERATOR_DECIBEL_PERM
            - String DECIBEL
            - String[] REQUIRED_POST_PARAMETERS
            - void executePost(HttpServletResponse response, Connection connection, int userId, ServletRequestAnalyser sra)
            # void doPost(HttpServletRequest request, HttpServletResponse response)
            # void doGet(HttpServletRequest request, HttpServletResponse response)
        }
        GeneratorDecibelServlet --|> SerialServlet
    }
}

@enduml